# construction-archive-v2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_callout_links.py
backend/app/: config.py  main.py
backend/app/api/v1/: chat.py  diff.py  ingest.py  search.py  sheets.py
backend/app/db/: qdrant.py
backend/app/models/: __init__.py  graph.py  ocr.py  project.py
backend/app/schemas/: chat.py  diff.py  ingestion.py  search.py
backend/app/services/chat/: rag_orchestrator.py  spatial_resolver.py
backend/app/services/diff/: revision_compare.py
backend/app/services/graph/: callout_extractor.py  graph_manager.py
backend/app/services/ingestion/: discipline_router.py  dzi_generator.py  metadata_extractor.py  ocr_client.py  pdf_splitter.py  pipeline.py
backend/app/services/search/: engine.py  indexer.py
backend/app/workers/: celery_app.py
backend/tests/: test_phase1_ingestion.py  test_phase2_1_graph.py  test_phase4_diff.py
docs/draft/: phase2.md  phase2_1.md  phase3.md  phase3_1.md  phase4_1.md  phase4_2.md  phase4_3.md  phase_1.md
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/upload/: PdfDropzone.tsx
frontend/src/components/viewer/: BlueprintViewer.tsx
frontend/src/hooks/: useChat.ts  useOpenSeadragon.ts  useSheetLinks.ts
frontend/src/lib/: api.ts  osdHelpers.ts
frontend/src/types/: api.ts
(+2 files in other folders)
